syntax = "proto3";

import "fintekkers/models/security/identifier/identifier_type.proto";

package fintekkers.models.security;

option java_multiple_files = true;

option java_outer_classname = "IdentifierProtos";

message IdentifierProto {
  string object_class = 1;
  string version = 2;

  //Primary Key
  string identifier_value = 5;
  IdentifierTypeProto identifier_type = 6;
}
