syntax = "proto3";

package fintekkers.models.strategy;

import "fintekkers/models/util/local_timestamp.proto";
import "fintekkers/models/util/uuid.proto";

option java_multiple_files = true;

option java_outer_classname = "StrategyProtos";

message StrategyProto {
  string object_class = 1;
  string version = 2;

  //Primary Key
  fintekkers.models.util.UUIDProto uuid = 5;
  fintekkers.models.util.LocalTimestampProto as_of = 6;
  bool is_link = 7;

  util.LocalTimestampProto valid_from = 8;
  util.LocalTimestampProto valid_to = 9;

  //Transaction details
  string strategy_name = 10;
  fintekkers.models.strategy.StrategyProto parent = 11;
}
