syntax = "proto3";

package util;

option java_package = "common.models.protoUtils";

message DecimalValueProto {
  uint32 scale = 1;
  bytes value = 3;
}